# minsim-reddit-crawler

./: .env.example  Dockerfile  Makefile  main.py  pyproject.toml
src/: main.py
src/client/: client.py
src/config/: config.py
src/redis/: client.py  queue.py
src/service/comment/: comment.proto  comment_pb2.py  comment_pb2.pyi  comment_pb2_grpc.py
src/service/post/: post.proto  post_pb2.py  post_pb2.pyi  post_pb2_grpc.py
src/service/submission/: submission.proto  submission_pb2.py  submission_pb2.pyi  submission_pb2_grpc.py
